--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@sanity/client": "^5.3.0",
-    "react-router-dom": "^6.9.0"
+    "react-router-dom": "^6.9.0",
+    "sass": "^1.62.0"
   }
 }
